# berth

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/berth-agent/: Cargo.toml  README.md  berth-agent.service  install.sh
apps/berth-agent/src/: config.rs  docker.rs  enroll.rs  host.rs  main.rs  panel.rs  protocol.rs  tls.rs  validators.rs
apps/berth-landing-page/: index.html  package.json  tsconfig.json  vite.config.ts
apps/berth-landing-page/scripts/: generate-icons.mjs
apps/berth-landing-page/src/: main.ts  style.css
apps/berth-panel/: README.md  package.json
apps/berth-server/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  package.json  tsconfig.build.json  tsconfig.json
apps/berth-server/prisma/: schema.prisma  seed.ts
apps/berth-server/scripts/: dev-local.ts
apps/berth-server/src/: app.module.ts  main.ts
apps/berth-server/src/activity/: activity.repository.ts  activity.service.ts
apps/berth-server/src/agent-gateway/: agent-gateway.module.ts
apps/berth-server/src/auth/: auth.module.ts
apps/berth-server/src/config/: configuration.ts
apps/berth-server/src/dashboard/: dashboard.module.ts
apps/berth-server/src/deployments/: deployments.module.ts
apps/berth-ui/: Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/berth-ui/public/: manifest.webmanifest
apps/berth-ui/src/: App.tsx  index.css  main.tsx
docs/: architecture.md
(+155 files in other folders)
