[package]
name = "berth-agent"
version = "0.1.0"
edition = "2021"
description = "Berth agent — native per-server daemon. Manages Docker, cgroups, and the reverse proxy; dials the panel over WebSocket/mTLS."

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
bollard = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
