[package]
name = "berth-agent"
version = "0.4.0"
edition = "2021"
description = "Berth agent - native per-server daemon. Manages Docker, cgroups, and the reverse proxy; dials the panel over WebSocket/mTLS."

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "stream", "rustls-tls-webpki-roots"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
